# Mangosteen-documents

./: README.md  demo.sh  demo_multi.sh  env_example  marker_run_example_cli.sh  ocr_multiple_files.py  ocr_single_file.py  ocr_single_loop.py  pyproject.toml  pytest.ini  run.sh  run_marker_loop.py  setup.sh
notebooks/: 00_donwload_pdf.ipynb  00_donwload_pdf_v2.ipynb  compute_ppl.py  nb.ipynb  ocr_convert_v2.ipynb
tests/: CHANGES.md  QUICK_START.md  README.md  TEST_SUMMARY.md
tests/utils/: __init__.py
tests/utils/count_thai/: __init__.py  conftest.py  test_count_thai.py
tests/utils/filters/: __init__.py  conftest.py  test_filter.py
utils/: compute_ppl.py  count_thai.py  filter.py  utils.py
