[project]
name = "mangosteen-documents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "accelerate>=1.10.1",
    "alive-progress>=3.3.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "loguru>=0.7.3",
    "marker-pdf[full]>=1.10.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "regex>=2024.11.6",
    "sentencepiece>=0.2.1",
    "transformers>=4.57.0",
]
